fix: ajustando gap da page pijama

--- a/Frontend/src/pages/PijamaIndividual/styles.module.css
+++ b/Frontend/src/pages/PijamaIndividual/styles.module.css
@@ -28,7 +28,7 @@
     flex-direction: column;
     height: 831px;
     align-items: flex-start;
-    gap: 55px;
+    gap: 50px;
 }
 
 .titulo {
